--- a/01/src/index.css
+++ b/01/src/index.css
@@ -25,7 +25,7 @@
 
 .login-btn {
   padding: 10px;
-  background-color: #9fbbf7;
+  background-color: #1944a1;
   border: none;
   border-radius: 8px;
   color: white;
